--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/vue-materialize-todo-spa/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.dd882384.js"></script>
-    <link rel="stylesheet" href="/assets/index.2c1a5400.css">
+    <script type="module" crossorigin src="/vue-materialize-todo-spa/assets/index.dd882384.js"></script>
+    <link rel="stylesheet" href="/vue-materialize-todo-spa/assets/index.2c1a5400.css">
   </head>
   <body>
     <div id="app"></div>
